--- a/public/vars.css
+++ b/public/vars.css
@@ -1,8 +1,10 @@
 :root {
   --clr-bg: rgb(252, 249, 243);
   --clr-slot-empty: rgb(230, 230, 230);
+  --clr-slot-beaten: rgb(211, 211, 211);
   --clr-slot-snap: rgb(180, 218, 221);
   --clr-text: rgb(24, 24, 31);
+  --clr-text-beaten: rgb(204, 204, 204);
   --width-team: 150px;
   --height-team: 30px;
   --fn-24: 700 24px Arial, sans-serif;
@@ -10,8 +12,10 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --clr-bg: rgb(24, 24, 31);
-    --clr-slot-empty: rgb(44, 44, 49);
+    --clr-slot-empty: rgb(61, 61, 77);
+    --clr-slot-beaten: rgb(44, 44, 49);
     --clr-slot-snap: rgb(53, 104, 109);
     --clr-text: #d6eeff;
+    --clr-text-beaten: #44505a;
   }
 }
